--- a/CommonLibrary/src/main/AndroidManifest.xml
+++ b/CommonLibrary/src/main/AndroidManifest.xml
@@ -2,4 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <application>
+
+        <provider
+            android:authorities="${applicationId}.KtxInstaller"
+            android:name=".ext.Ktx"
+            android:exported="false"/>
+    </application>
 </manifest>
