--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/CommonAppTheme.WelcomeTheme"
+        android:networkSecurityConfig="@xml/net_work_config"
         tools:targetApi="31">
         <activity
             android:name="com.kedo.app.MainActivity"
